# engi-math

./: Cargo.toml  Cargo.toml~  build.rs  build.rs~
compute_core/: CMakeLists.txt  CMakeLists.txt~  math_core.cpp  math_core.h
docs/: EMT-Project-Plan-webapp.md  architecture-blueprint.md  architecture-suggetions.md  core-flow.md  mvp-features.md
src/: lib.rs~  main.rs  main.rs~
